--- a/Purchase_data_recommendation_engine.ipynb
+++ b/Purchase_data_recommendation_engine.ipynb
@@ -85,7 +85,7 @@
     }
    ],
    "source": [
-    "df1 = pd.read_csv(\"H:\\\\Datatsets\\\\medium-master\\\\medium-master\\\\items-recommender\\\\data\\\\trx_data.csv\")\n",
+    "df1 = pd.read_csv(\"H:\\\\Datatsets\\\\items-recommender\\\\data\\\\trx_data.csv\")\n",
     "df1.head(5)"
    ]
   },
@@ -158,7 +158,7 @@
     }
    ],
    "source": [
-    "df2 = pd.read_csv(\"H:\\\\Datatsets\\\\medium-master\\\\medium-master\\\\items-recommender\\\\data\\\\recommend_1.csv\")\n",
+    "df2 = pd.read_csv(\"H:\\\\Datatsets\\\\items-recommender\\\\data\\\\recommend_1.csv\")\n",
     "df2.head(5)"
    ]
   },
